rest/rest-depolyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-server
spec:
  selector:
    matchLabels:
      app: rest-server
  replicas: 1
  template:
    metadata:
      labels:
        app: rest-server
    spec:
      containers:
      - name: rest-server
        image: nitharshan/demucs-rest:latest  # Replace with your Docker Hub image
        ports:
        - containerPort: 5000
