rest/rest-ingress.yaml
#
# See https://kubernetes.io/docs/concepts/services-networking/ingress/
#
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: frontend-ingress
#  annotations:
#    # use the shared ingress-nginx
#    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/proxy-body-size: 16m
#spec:
#  rules:
##
## Your ingress rules here
##

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rest-service
            port:
              number: 5000
